// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-pagination-cursor #render should render as expected (1) 1`] = `
<gux-pagination-cursor label="Example label">
  <template shadowrootmode="open">
    <nav aria-label="Example label" class="gux-pagination-button-container">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button" disabled="">
          <gux-icon iconname="custom/chevron-left-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Previous
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button" disabled="">
          <gux-icon iconname="custom/chevron-right-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Next
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
    </nav>
  </template>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (2) 1`] = `
<gux-pagination-cursor has-next="" label="Example label">
  <template shadowrootmode="open">
    <nav aria-label="Example label" class="gux-pagination-button-container">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button" disabled="">
          <gux-icon iconname="custom/chevron-left-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Previous
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="custom/chevron-right-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Next
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
    </nav>
  </template>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (3) 1`] = `
<gux-pagination-cursor has-previous="" has-next="" label="Example label">
  <template shadowrootmode="open">
    <nav aria-label="Example label" class="gux-pagination-button-container">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="custom/chevron-left-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Previous
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="custom/chevron-right-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Next
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
    </nav>
  </template>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (4) 1`] = `
<gux-pagination-cursor has-previous="" label="Example label">
  <template shadowrootmode="open">
    <nav aria-label="Example label" class="gux-pagination-button-container">
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button">
          <gux-icon iconname="custom/chevron-left-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Previous
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-simple-button" type="button" disabled="">
          <gux-icon iconname="custom/chevron-right-small-regular" decorative="" size="small">
          </gux-icon>
          <gux-screen-reader-beta>
            Next
          </gux-screen-reader-beta>
        </button>
      </gux-button-slot>
    </nav>
  </template>
</gux-pagination-cursor>
`;

exports[`gux-pagination-cursor #render should render as expected (5) 1`] = `
<gux-pagination-cursor layout="advanced" label="Example label">
  <template shadowrootmode="open">
    <nav aria-label="Example label" class="gux-pagination-button-container">
      <gux-button-slot accent="ghost">
        <button type="button" disabled="">
          <div class="gux-button-align-content">
            <gux-icon decorative="" iconname="custom/chevron-left-small-regular" size="small">
            </gux-icon>
            <span>
              Previous
            </span>
          </div>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button type="button" disabled="">
          <div class="gux-button-align-content">
            <span>
              Next
            </span>
            <gux-icon decorative="" iconname="custom/chevron-right-small-regular" size="small">
            </gux-icon>
          </div>
        </button>
      </gux-button-slot>
    </nav>
  </template>
</gux-pagination-cursor>
`;
